syntax = "proto3";

package user_service;

option go_package = "grpc/user_service";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc GetUserList(GetUserListRequest) returns (GetUserListResponse) {}
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc SearchUser(SearchUserRequest) returns (SearchUserResponse) {}

    rpc CreateUserPassword(CreateUserPasswordRequest) returns (CreateUserPasswordResponse) {}
    rpc UpdateUserPassword(UpdateUserPasswordRequest) returns (UpdateUserPasswordResponse) {}
    rpc LoginWithPassword(LoginWithPasswordRequest) returns (LoginWithPasswordResponse) {}

    rpc GetUserFromToken(GetUserFromTokenRequest) returns (GetUserFromTokenResponse) {}
    rpc BlacklistToken(BlacklistTokenRequest) returns (BlacklistTokenResponse) {}

    rpc CreateUserRole(CreateUserRoleRequest) returns (CreateUserRoleResponse) {}
    rpc UpdateUserRole(UpdateUserRoleRequest) returns (UpdateUserRoleResponse) {}
    rpc DeleteUserRole(DeleteUserRoleRequest) returns (DeleteUserRoleResponse) {}

    rpc AddUserRoleToUser(AddUserRoleToUserRequest) returns (AddUserRoleToUserResponse) {}
    rpc RemoveUserRoleFromUser(RemoveUserRoleFromUserRequest) returns (RemoveUserRoleFromUserResponse) {}
    rpc GetUserRoleListOfUserList(GetUserRoleListOfUserListRequest) returns (GetUserRoleListOfUserListResponse) {}

    rpc CreateUserPermission(CreateUserPermissionRequest) returns (CreateUserPermissionResponse) {}
    rpc UpdateUserPermission(UpdateUserPermissionRequest) returns (UpdateUserPermissionResponse) {}
    rpc DeleteUserPermission(DeleteUserPermissionRequest) returns (DeleteUserPermissionResponse) {}
    rpc GetUserPermissionList(GetUserPermissionListRequest) returns (GetUserPermissionListResponse) {}

    rpc AddUserPermissionToUserRole(AddUserPermissionToUserRoleRequest) returns (AddUserPermissionToUserRoleResponse) {}
    rpc RemoveUserPermissionFromUserRole(RemoveUserPermissionFromUserRoleRequest) returns (RemoveUserPermissionFromUserRoleResponse) {}
    rpc GetUserPermissionListOfUserRoleList(GetUserPermissionListOfUserRoleListRequest) returns (GetUserPermissionListOfUserRoleListResponse) {}

    rpc GetUserPermissionListOfUser(GetUserPermissionListOfUserRequest) returns (GetUserPermissionListOfUserResponse) {}
}

message User {
    uint32 id = 1;
    string username = 2;
    string display_name = 3;
    string email = 4;
}

message UserPassword {
    uint32 of_user_id = 2;
    string password = 3;
}

message CreateUserRequest {
    string username = 1;
    string display_name = 2;
    string email = 3;
}

message UserRole {
    uint32 id = 1;
    string display_name = 2;
    string description = 3;
}

message UserRoleList {
    repeated UserRole user_role_list = 1;
}

message UserPermission {
    uint32 id = 1;
    string permission_name = 2;
    string description = 3;
}

message UserPermissionList {
    repeated UserPermission user_permission_list = 1;
}

message CreateUserResponse {
    User user=1;
}

message UpdateUserRequest {
    User user=1;
}

message UpdateUserResponse {
    User user=1;
}

message UserListSortOrder {
    enum Values {
        ID_ASCENDING = 0;
        ID_DESCENDING = 1;
        USERNAME_ASCENDING = 2;
        USERNAME_DESCENDING = 3;
        DISPLAY_NAME_ASCENDING = 4;
        DISPLAY_NAME_DESCENDING = 5;
    }
}
message UserListFilterOptions {
    string username_query = 1;
    repeated uint32 user_tag_id_list = 2;
    repeated uint32 user_role_id_list = 3;
}

message GetUserListRequest {
    uint32 offset = 1;
    uint32 limit = 2;
    UserListSortOrder.Values sort_order = 3;
    UserListFilterOptions filter_options = 4;
}

message GetUserListResponse {
    uint32 total_user_count = 1;
    repeated User user_list = 2;
}

message GetUserRequest {
    uint32 id = 1;
}

message GetUserResponse {
    User user = 1;
}

message SearchUserRequest {
    string query = 1;
    uint32 limit = 2;
    repeated uint32 included_user_id_list = 3;
}

message SearchUserResponse {
    repeated User user_list = 1;
}

message CreateUserPasswordRequest {
    UserPassword password = 1;
}

message CreateUserPasswordResponse {}

message UpdateUserPasswordRequest {
    UserPassword password = 1;
}

message UpdateUserPasswordResponse {}

message LoginWithPasswordRequest {
    string username = 1;
    string password = 2;
}

message LoginWithPasswordResponse {
    User user = 1;
    string token = 2;
}

message GetUserFromTokenRequest {
    string token = 1;
}

message GetUserFromTokenResponse {
    User user = 1;
    string new_token = 2;
}

message BlacklistTokenRequest {
    string token = 1;
}

message BlacklistTokenResponse {}

message CreateUserRoleRequest {
    string display_name = 1;
    string description = 2;
}

message CreateUserRoleResponse {
    UserRole user_role = 1;
}

message UpdateUserRoleRequest {
    UserRole user_role = 1;
}

message UpdateUserRoleResponse {
    UserRole user_role = 1;
}

message DeleteUserRoleRequest {
    uint32 id = 1;
}

message DeleteUserRoleResponse {}

message AddUserRoleToUserRequest {
    uint32 user_id = 1;
    uint32 user_role_id = 2;
}

message AddUserRoleToUserResponse {}

message RemoveUserRoleFromUserRequest {
    uint32 user_id = 1;
    uint32 user_role_id = 2;
}

message RemoveUserRoleFromUserResponse {}

message GetUserRoleListOfUserListRequest {
    repeated uint32 user_id_list = 1;
}

message GetUserRoleListOfUserListResponse {
    repeated UserRoleList user_role_list_of_user_list = 1;
}

message CreateUserPermissionRequest {
    string permission_name = 1;
    string description = 2;
}

message CreateUserPermissionResponse {
    UserPermission user_permission = 1;
}

message UpdateUserPermissionRequest {
    UserPermission user_permission = 1;
}

message UpdateUserPermissionResponse {
    UserPermission user_permission = 1;
}

message DeleteUserPermissionRequest {
    uint32 id = 1;
}

message DeleteUserPermissionResponse {}

message GetUserPermissionListRequest {}

message GetUserPermissionListResponse {
    repeated UserPermission user_permission_list = 1;
}

message AddUserPermissionToUserRoleRequest {
    uint32 user_role_id = 1;
    uint32 user_permission_id = 2;
}

message AddUserPermissionToUserRoleResponse {}

message RemoveUserPermissionFromUserRoleRequest {
    uint32 user_role_id = 1;
    uint32 user_permission_id = 2;
}

message RemoveUserPermissionFromUserRoleResponse {}

message GetUserPermissionListOfUserRoleListRequest {
    repeated uint32 user_role_id_list = 1;
}

message GetUserPermissionListOfUserRoleListResponse {
    repeated UserPermissionList user_permission_list_of_user_role_list = 1;
}

message GetUserPermissionListOfUserRequest {
    uint32 user_id = 1;
}

message GetUserPermissionListOfUserResponse {
    repeated UserPermission user_permission_list = 2;
}